[metadata]
name = toranobot
version = 0.0.1
url = https://github.com/chunglak/toranobot
author = Alfred Leung
author_email = chunglak@gmail.com
description = A ML-assisted framework for devising stock trading strategies
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later

[options]
python_requires = >=3.11
package_dir =
    =src
packages = find:
zip_safe = True
include_package_data = True

install_requires =
    gymnasium
# install_requires =
#     pandas == 1.4.1
#     PyYAML >= 6.0
#     typer

# [options.extras_require]
# notebook = jupyter>=1.0.0, matplotlib
# dev =
#     black==22.1.0
#     flake8==4.0.1
# These dependencies will only be installed if you ask for them, e.g. pip install -e ".[dev]" or pip install "example-0.1.0-py3-none-any.whl[dev,notebook]". Do not forget to quote the package name in those commands!

# If you have any functions in your package that you would like to expose to be used as a command-line utility, you can add them to the console_scripts entry points. For example, if you have a function called main in example_module.py, then adding this to your setup.cfg will allow users to run my-example-utility as a shell command:

# [options.entry_points]
# console_scripts =
#     my-example-utility = example.example_module:main

[options.packages.find]
where = src
exclude =
    test*

[options.package_data]
* =
  *.typed
